# trogocytosis

./: .gitignore  README.md  pyproject.toml
.claude/agent-memory/research/: MEMORY.md  mcp_transport_hosting_2026.md
assays/: test_agent_browser.py  test_cli.py  test_playwright_wrapper.py  test_stealth.py
docs/: spec.md
skills/auth-wall-recovery/: SKILL.md
skills/browser-extraction/: SKILL.md
skills/browser-session/: SKILL.md
skills/browser-stealth/: SKILL.md
src/trogocytosis/: __init__.py  _agent_browser.py  _playwright.py  browser.py  cli.py  cookies.py  install.py  server.py  stealth.py
tests/: test_browser.py  test_cookies.py
