[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "trogocytosis"
version = "0.9.0"
description = "Browser automation CLI with credential transfer and stealth."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Terry Li" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
keywords = ["cli", "browser", "automation", "agent-browser", "stealth"]

dependencies = [
    "cyclopts>=4.0",
]

[project.optional-dependencies]
cookies = ["pycookiecheat>=0.7"]
all = ["pycookiecheat>=0.7"]

[project.urls]
Homepage = "https://github.com/vivesca/trogocytosis"
Repository = "https://github.com/vivesca/trogocytosis"

[project.scripts]
trogocytosis = "trogocytosis.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trogocytosis"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "trogocytosis/_skills"

[tool.hatch.build.targets.sdist]
include = [
    "src/trogocytosis",
    "skills",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
